Bug 397721 - to-do item once set to 100% completion, it is not possible to set to anything else
Summary: to-do item once set to 100% completion, it is not possible to set to anything...
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: incidence editors (other bugs)
Version First Reported In: 5.8.3
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-08-21 20:17 UTC by Zoltan Padrah
Modified: 2021-07-09 01:14 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Zoltan Padrah 2018-08-21 20:17:44 UTC
When a to-do item is marked as completed, it stays completed forever.

Steps to reproduce:

Variant A:

1. select a calendar
2. select New to-do, set its name to anything, click OK
3. right-click on the new to-do, click 'Toggle To-do Completed'
4. right-click again on the new to-do, click 'Toggle To-do Completed'

Expected: the new To-do item gets set to 0% (not completed) state
Actual result: the new To-do item stays in the 100% (Completed) state


Variant B:

1. select a calendar
2. select New to-do, set its name to anything,
3. set the Completion to 100%
4. click OK
3. Double-click on the new to-do item, set Completion to anything less than 100%
4. Click apply

Expected: the new To-do item's Completion progress stays at the value set by the user
Actual result: the new To-do item's Completion progress stays in the 100% (Completed) state


Tested on KDE Neon user edition 5.13, fresh install of Kontact, version 5.8.3, image from August 2018.

In case it is useful:
$ apt show kontact
Package: kontact
Version: 4:18.08.0-0xneon+16.04+xenial+build53
Comment 1 Zoltan Padrah 2019-01-29 21:49:31 UTC
This bug is also present in KOrganizer/Kontact version 5.10.1, in KDE Neon packages as January 2019.
Comment 2 Bug Janitor Service 2021-07-08 19:29:33 UTC
A possibly relevant merge request was started @ https://invent.kde.org/pim/incidenceeditor/-/merge_requests/19
Comment 3 gjditchfield 2021-07-09 00:30:14 UTC
Git commit 58d2f7316919c1d50d9990c28e701397d1d121d6 by Glen Ditchfield, on behalf of Glen Ditchfield.
Committed on 08/07/2021 at 19:35.
Pushed by gditchfield into branch 'master'.

Allow change of completion percentage of completed to-dos

If a non-recurring to-do has been completed, attempting to reduce its
completion percentage has no effect, because `Todo::setPercentComplete(0)`
alone is not sufficient.  This patch brute-forces all completion-related
fields.

M  +5    -1    src/incidencecompletionpriority.cpp

https://invent.kde.org/pim/incidenceeditor/commit/58d2f7316919c1d50d9990c28e701397d1d121d6
Comment 4 gjditchfield 2021-07-09 01:14:24 UTC
Git commit 81a19f7be52ac5a6695a356d1d3fb1944b98f5c2 by Glen Ditchfield, on behalf of Glen Ditchfield.
Committed on 09/07/2021 at 00:28.
Pushed by gditchfield into branch 'master'.

Toggle completed to-dos back to incomplete

If a non-recurring to-do has been completed, selecting "Toggle To-do
Completed" from its right-click menu does not make it incomplete, because
`Todo::setPercentComplete(0)` is not sufficient.  This patch brute-forces
all completion-related fields.

M  +4    -0    src/calendarview.cpp

https://invent.kde.org/pim/korganizer/commit/81a19f7be52ac5a6695a356d1d3fb1944b98f5c2