Allow change of completion percentage of completed to-dos

If a non-recurring to-do has been completed, attempting to reduce its
completion percentage has no effect, because `Todo::setPercentComplete(0)`
alone is not sufficient.  This patch brute-forces all completion-related
fields.
BUG: 397721